@@ -1,3 +1,6 @@
+2011-09-20
+ * Conditionally include Arduino.h for compatibility with Arduino 1.0
+
 2010-07-23
  * Added SHT7x to list of supported sensors.
  * Fixed temperature offset in humidity calculation.
